Fix : 자기소개서 목록 출력 API 수정 사항 반영
1. ApiGetCoverLetterList : 출력 성공 시 data 예시 수정
2. CoverLetterController : 불필요한 로그 삭제
3. CoverLetterListResponseDto : Dto명 수정
4. CoverLetterService : 예외 명세 수정
5. CoverLetterServiceImpl : 빈 리스트 체크 메서드 삭제