@@ -1,6 +1,6 @@
 package com.miracle.userservice.service;
 
-import com.miracle.userservice.dto.response.SearchCoverLetterResponseDto;
+import com.miracle.userservice.dto.response.CoverLetterListResponseDto;
 import com.miracle.userservice.entity.CoverLetter;
 import com.miracle.userservice.repository.CoverLetterRepository;
 import lombok.RequiredArgsConstructor;
@@ -17,23 +17,19 @@ public class CoverLetterServiceImpl implements CoverLetterService{
 
     private final CoverLetterRepository coverLetterRepository;
     @Override
-    public List<SearchCoverLetterResponseDto> getCoverLetterList(Long userId) {
+    public List<CoverLetterListResponseDto> getCoverLetterList(Long userId) {
         String errorMessage = "userId is null";
         Objects.requireNonNull(userId, errorMessage);
 
         List<CoverLetter> coverLetterList = coverLetterRepository.findByUserId(userId);
 
-        if (coverLetterList.isEmpty()) {
-            return Collections.emptyList();
-        }
-
         return coverLetterList.stream()
-                .map(coverLetter -> new SearchCoverLetterResponseDto(
+                .map(coverLetter -> new CoverLetterListResponseDto(
                         coverLetter.getId(),
                         coverLetter.getUser().getId(),
                         coverLetter.getTitle(),
                         coverLetter.getModifiedAt()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
